Created the flash, and added other cool things